// Meatloaf - A Commodore 64/128 multi-device emulator
// https://github.com/idolpx/meatloaf
// Copyright(C) 2020 James Johnston
//
// Meatloaf is free software : you can redistribute it and/or modify
// it under the terms of the GNU General Public License as published by
// the Free Software Foundation, either version 3 of the License, or
// (at your option) any later version.
//
// Meatloaf is distributed in the hope that it will be useful,
// but WITHOUT ANY WARRANTY; without even the implied warranty of
// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
// GNU General Public License for more details.
//
// You should have received a copy of the GNU General Public License
// along with Meatloaf. If not, see <http://www.gnu.org/licenses/>.

//
// https://www.c64-wiki.com/wiki/Fast_serial_bus_protocol
// https://a1bert.kapsi.fi/Dev/burst/
// https://web.archive.org/web/20220125025330/https://sites.google.com/site/h2obsession/CBM/C128/fast-serial-for-uiec
// https://github.com/GideonZ/1541ultimate/issues/60
//

// #ifndef PROTOCOL_CPBFASTSERIAL_H
// #define PROTOCOL_CPBFASTSERIAL_H

// Commodore Peripheral Bus: Fast Serial

//#include "cpbstandardserial.h"

// namespace Protocol
// {
// 	class CPBFastSerial : public CBMStandardSerial
// 	{
// 	public:

// 		virtual int16_t receiveByte(uint8_t device) override;
// 		virtual bool sendByte(uint8_t data, bool signalEOI) override;

// 	};
// }

// #endif // PROTOCOL_CPBFASTSERIAL_H
